src/objects/FAM__FA_Depreciation_Schedule__c.object
<CustomObject>
    <customHelpPage>FAM__DepreciationScheduleHelp</customHelpPage>
    <description>Contains records of the amount by which an asset is to depreciate by on a particular date.</description>
    <fields>
        <fullName>FAM__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAM__Depreciation_Amount__c</fullName>
        <label>Depreciation Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAM__Depreciation_Book__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the depreciation book to which the depreciation schedule relates.</description>
        <inlineHelpText>Lookup to the depreciation book to which the depreciation schedule relates.</inlineHelpText>
        <label>Depreciation Book</label>
        <referenceTo>FAM__Depreciation_Book__c</referenceTo>
        <relationshipLabel>Depreciation Schedules (Depreciation Book)</relationshipLabel>
        <relationshipName>FA_Depreciation_Schedules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAM__Effective_Depreciation_Date__c</fullName>
        <label>Effective Depreciation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAM__Fixed_Asset__c</fullName>
        <label>Fixed Asset</label>
        <referenceTo>FAM__Fixed_Asset__c</referenceTo>
        <relationshipLabel>FA Depreciation Schedules</relationshipLabel>
        <relationshipName>FA_Depreciation_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FAM__MACRS_Rate__c</fullName>
        <description>The MACRS depreciation rate used for the schedule.</description>
        <label>MACRS Rate</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAM__Mass_Depreciation_UI_As_of_Date__c</fullName>
        <description>This field is used purely for the mass depreciation UI and nothing should be stored here.</description>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAM__Mass_Depreciation_UI_Period_Start_Date__c</fullName>
        <description>This field is used purely for the mass depreciation UI and nothing should be stored here.</description>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAM__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Exported</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAM__Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAM__Units_of_Production_Actual__c</fullName>
        <label>Units of Production (Actual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAM__Units_of_Production_Estimated__c</fullName>
        <label>Units of Production (Estimated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Depreciation Schedule</label>
    <nameField>
        <displayFormat>FAD-{000000}</displayFormat>
        <label>FA Depreciation Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Depreciation Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>